# tokentracking

./: .gitignore  AGENTS.md  README.md  llm-tracker-spec  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: alerts.yml  deploy.yml  scrape.yml
data/: affiliates.json
data/changelog/: 2025-12-29.json  2026-01-06.json  2026-01-09.json  2026-01-14.json  2026-01-15.json  2026-01-16.json  2026-01-19.json  2026-01-20.json  2026-01-23.json  2026-01-24.json  2026-01-25.json  2026-01-27.json  2026-01-28.json  2026-01-30.json  2026-02-02.json  2026-02-03.json  2026-02-04.json  2026-02-08.json  2026-02-10.json  2026-02-11.json  2026-02-13.json  2026-02-16.json  2026-02-17.json  2026-02-19.json  latest.json
data/current/: litellm.json  openrouter.json  prices.json
data/history/2026/01/: 01.json  02.json  05.json  11.json  12.json  14.json  16.json  17.json  18.json  20.json  24.json  25.json  27.json  28.json
data/history/2026/02/: 02.json  03.json  05.json  06.json  07.json  09.json  11.json  16.json  20.json
scripts/: detect_changes.py  generate_site.py  normalize.py  scrape.py  send_alerts.py
website/: api.html  calculator.html  changelog.html  compare.html  find.html  index.html  styles.css
website/data/: changelog.json  prices.json
