[project]
name = "tokentracking"
version = "1.0.0"
description = "real-time pricing for AI models"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
  "httpx>=0.27.0",
  "jinja2>=3.1.2",
  "pydantic>=2.5.0",
  "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
